hphp/hack/test/sound_dynamic/typing/dict_create.bad.php
<?hh

function f(dynamic $d) : void {
  dict<int, int>[$d => 1];
}
